resources/js/assets/sass/header.scss
.css-d1xm6m {
    backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
    -webkit-backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
    box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.32), inset -1px 0 2px rgba(0, 0, 0, 0.16) !important;
    background: linear-gradient(90deg, rgba(17, 17, 17, 0.3) 0%, rgba(0, 90, 150, 0.8) 100%) !important;
}

.css-1xomo8h-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
    backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
    -webkit-backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
    box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.32), inset -1px 0 2px rgba(0, 0, 0, 0.16) !important;
    background: linear-gradient(90deg, rgba(17, 17, 17, 0.3) 0%, rgba(0, 90, 150, 0.8) 100%) !important;
}

.css-81kwad {
    backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
    -webkit-backdrop-filter: blur(3px) brightness(100%) saturate(87.5%) hue-rotate(10deg) !important;
    box-shadow: inset 1px 0 0 rgba(255, 255, 255, 0.32), inset -1px 0 2px rgba(0, 0, 0, 0.16) !important;
    background: linear-gradient(90deg, rgba(17, 17, 17, 0.3) 0%, rgba(0, 90, 150, 0.8) 100%) !important;
}

